--- a/recipes/chicken-tikka-masala.html
+++ b/recipes/chicken-tikka-masala.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>submit this</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>odin-recipes</h1>
-    <a href="recipes/chicken-tikka-masala.html">chicken-tikka-masala</a>
+    <h1>chicken-tikka-masala</h1>
+    <a href = "../index.html">Home</a>
 </body>
 </html>
