--- a/recipes/chicken-tikka-masala.html
+++ b/recipes/chicken-tikka-masala.html
@@ -7,6 +7,23 @@
 </head>
 <body>
     <h1>chicken-tikka-masala</h1>
+    <img src="https://www.allrecipes.com/thmb/sqGWwlpv8YYeoyVzkGoqkEkP2OY=/0x512/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/239867chef-johns-chicken-tikka-masala-ddmfs-3X4-0572-e02a25f8c7b745459a9106e9eb13de10.jpg" alt ="image">
+    <h2>Description</h2>
+    <p>Chicken tikka masala made easy with this great-tasting recipe — simply marinate chicken breast in yogurt and spices and then simmer in a tomato cream sauce. Serve with rice or warm pita bread.</p>
+    <h2>ingredients</h2>
+    <ul>
+        <li>chicken</li>
+        <li>skewers</li>
+        <li>yogurt</li>
+        <li>etc.</li>
+    </ul>
+    <h2>steps</h2>
+    <ol>
+        <li>Combine yogurt, lemon juice, 2 teaspoons cumin, cinnamon, cayenne, black pepper, ginger, and 1 teaspoon salt in a large bowl.</li>
+        <li>Stir in chicken, cover, and refrigerate for 1 hour.</li>
+        <li>Preheat a grill for high heat.</li>
+        <li>wait for more</li>
+    </ol>
     <a href = "../index.html">Home</a>
 </body>
 </html>
